Many modifications to satisfy findbugs (mostly).